# Automated-License-Plate-Recognition-and-Access-Control-YOLOv8n

./: .env.example  .gitignore  DOCUMENTATION.md  LICENSE_PLATE_SERVICE_README.md  license_plates.db  main.py  main_with_authorization.py  model_v8n_train.ipynb  pyproject.toml  quickstart.py  requirements.txt  test2.csv  test_interpolated.csv
alpr.egg-info/: PKG-INFO  SOURCES.txt
scripts/: add_missing_data.py  database_init.py  main.py  test_authorization_service.py  visualize.py
src/core/: sort.py  util.py
src/services/: license_plate_service.py
training/: model_v8m_train.ipynb  model_v8n_train.ipynb
