[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alpr"
version = "0.1.0"
description = "Automatic License Plate Recognition with YOLOv8n and Access Control"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
